refactor(websocket)!: 生产化单节点 WebSocket 框架
- 引入真实握手鉴权、自动注解路由与统一 WebSocket 错误码
- 完善会话限流、房间双索引一致性、发送背压和投递统计
- 接入可替换 JsonCodec、Spring 心跳调度和 Servlet 容器帧限制
- 收紧同源默认值，删除伪 Token 和伪分布式描述并更新使用文档