@@ -1,160 +1,187 @@
 package com.github.leyland.letool.websocket.core;
 
+import com.github.leyland.letool.websocket.exception.WsException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.*;
+import java.util.Collection;
+import java.util.LinkedHashSet;
+import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 /**
- * WebSocket 会话生命周期管理器，负责会话的注册、注销、查询和强制下线。
+ * 使用双索引维护本进程 WebSocket 会话的线程安全管理器。
  *
- * <p>该管理器维护两个核心索引：</p>
- * <ul>
- *   <li>{@code sessions} — sessionId -&gt; WsSession，用于按会话 ID 快速定位</li>
- *   <li>{@code userSessions} — userId -&gt; Set&lt;sessionId&gt;，用于按用户 ID 查找其所有会话</li>
- * </ul>
- *
- * <p>线程安全：所有集合操作均使用 {@link ConcurrentHashMap}，保证并发场景下的数据一致性。</p>
- *
- * <p>使用示例：</p>
- * <pre>{@code
- * // 注册新会话
- * sessionManager.register(session);
- *
- * // 查询某用户的所有会话
- * Set<WsSession> userSessions = sessionManager.getUserSessions("user123");
- *
- * // 强制踢出某会话
- * sessionManager.kickOut(sessionId);
- * }</pre>
- *
- * @author leyland
- * @since 2.0.0
+ * <p>同一用户的注册、限流与删除由稳定分段锁串行化，避免主索引和用户索引在
+ * 并发连接/断开时产生永久不一致。</p>
  */
 public class WsSessionManager {
 
     private static final Logger log = LoggerFactory.getLogger(WsSessionManager.class);
+    private static final int LOCK_STRIPE_COUNT = 128;
 
-    // ======================== 索引容器 ========================
-
-    /** sessionId -> WsSession 映射 */
     private final ConcurrentHashMap<String, WsSession> sessions = new ConcurrentHashMap<>();
-
-    /** userId -> Set<sessionId> 映射（一个用户可能同时打开多个连接） */
     private final ConcurrentHashMap<String, Set<String>> userSessions = new ConcurrentHashMap<>();
-
-    // ======================== 会话注册与注销 ========================
+    private final Object[] userLocks = createLocks();
+    private final int maxSessionPerUser;
 
     /**
-     * 注册新会话。
+     * 使用默认单用户上限创建管理器。
+     */
+    public WsSessionManager() {
+        this(5);
+    }
+
+    /**
+     * 创建指定单用户会话上限的管理器。
      *
-     * <p>将新建立的 WebSocket 会话加入 {@code sessions} 索引，如果会话绑定了用户 ID，
-     * 则同时更新 {@code userSessions} 索引。</p>
+     * @param maxSessionPerUser 单用户最大同时在线会话数
+     */
+    public WsSessionManager(int maxSessionPerUser) {
+        if (maxSessionPerUser <= 0) {
+            throw new IllegalArgumentException("maxSessionPerUser must be positive");
+        }
+        this.maxSessionPerUser = maxSessionPerUser;
+    }
+
+    /**
+     * 原子校验用户限额并注册会话双索引。
      *
-     * @param session 待注册的会话，不可为 {@code null}
+     * @param session 待注册会话
+     * @throws WsException 单用户会话达到上限或会话 ID 冲突时抛出
      */
     public void register(WsSession session) {
         Objects.requireNonNull(session, "session must not be null");
-        sessions.put(session.getSessionId(), session);
-        String userId = session.getUserId();
-        if (userId != null && !userId.isEmpty()) {
-            userSessions.computeIfAbsent(userId, k -> ConcurrentHashMap.newKeySet()).add(session.getSessionId());
-        }
-        log.info("Session registered: {} (userId={})", session.getSessionId(), userId);
-    }
-
-    /**
-     * 移除会话。
-     *
-     * <p>从 {@code sessions} 和 {@code userSessions} 两个索引中同时移除该会话。
-     * 若会话所属的用户不再有活跃会话，则同步清理 {@code userSessions} 中的用户条目。</p>
-     *
-     * @param sessionId 待移除的会话 ID
-     * @return 被移除的会话对象，如果会话不存在返回 {@code null}
-     */
-    public WsSession remove(String sessionId) {
-        if (sessionId == null) return null;
-        WsSession removed = sessions.remove(sessionId);
-        if (removed != null) {
-            String userId = removed.getUserId();
-            if (userId != null && !userId.isEmpty()) {
-                Set<String> ids = userSessions.get(userId);
-                if (ids != null) {
-                    ids.remove(sessionId);
-                    if (ids.isEmpty()) {
-                        userSessions.remove(userId);
-                    }
-                }
+        synchronized (session) {
+            String userId = session.getUserId();
+            if (userId == null || userId.isBlank()) {
+                registerWithoutUser(session);
+                return;
             }
-            removed.disconnect();
-            log.info("Session removed: {} (userId={})", sessionId, userId);
+            synchronized (lockFor(userId)) {
+                WsSession existing = sessions.get(session.getSessionId());
+                if (existing == session) {
+                    return;
+                }
+                if (existing != null) {
+                    throw WsException.configurationInvalid("WebSocket 会话 ID 冲突");
+                }
+                Set<String> currentIds = userSessions.get(userId);
+                int currentSize = currentIds == null ? 0 : currentIds.size();
+                if (currentSize >= maxSessionPerUser) {
+                    throw WsException.sessionLimitExceeded(userId);
+                }
+
+                // 限流通过后才暴露会话，并在同一用户临界区内完成反向索引。
+                WsSession raced = sessions.putIfAbsent(session.getSessionId(), session);
+                if (raced != null && raced != session) {
+                    throw WsException.configurationInvalid("WebSocket 会话 ID 冲突");
+                }
+                userSessions.computeIfAbsent(userId, ignored -> ConcurrentHashMap.newKeySet())
+                        .add(session.getSessionId());
+            }
+            log.debug("WebSocket 会话已注册，sessionId={}，userId={}", session.getSessionId(), userId);
         }
-        return removed;
     }
 
-    // ======================== 会话查询 ========================
-
     /**
-     * 根据会话 ID 获取会话。
+     * 幂等移除会话及其用户索引并关闭连接。
      *
      * @param sessionId 会话 ID
-     * @return 对应的 WsSession，不存在返回 {@code null}
+     * @return 被移除的会话，不存在时返回 {@code null}
+     */
+    public WsSession remove(String sessionId) {
+        if (sessionId == null) {
+            return null;
+        }
+        WsSession candidate = sessions.get(sessionId);
+        if (candidate == null) {
+            return null;
+        }
+        synchronized (candidate) {
+            String userId = candidate.getUserId();
+            if (userId == null || userId.isBlank()) {
+                return sessions.remove(sessionId, candidate) ? disconnect(candidate) : null;
+            }
+            synchronized (lockFor(userId)) {
+                if (!sessions.remove(sessionId, candidate)) {
+                    return null;
+                }
+                userSessions.computeIfPresent(userId, (ignored, ids) -> {
+                    ids.remove(sessionId);
+                    return ids.isEmpty() ? null : ids;
+                });
+            }
+            return disconnect(candidate);
+        }
+    }
+
+    /**
+     * 按 ID 查询会话。
+     *
+     * @param sessionId 会话 ID
+     * @return 会话，不存在时返回 {@code null}
      */
     public WsSession getSession(String sessionId) {
-        if (sessionId == null) return null;
-        return sessions.get(sessionId);
+        return sessionId == null ? null : sessions.get(sessionId);
     }
 
     /**
-     * 获取指定用户的所有活跃会话。
+     * 查询指定用户的会话快照。
      *
-     * <p>每次调用会实时从 {@code sessions} 中查找，确保返回的会话对象是最新的，
-     * 同时自动清理 {@code userSessions} 索引中已失效的会话 ID。</p>
-     *
-     * @param userId 用户 ID
-     * @return 该用户的所有 WsSession 集合，不存在或用户无会话时返回空集合
+     * @param userId 用户标识
+     * @return 不可变会话快照
      */
     public Set<WsSession> getUserSessions(String userId) {
-        if (userId == null || userId.isEmpty()) return Collections.emptySet();
-        Set<String> ids = userSessions.get(userId);
-        if (ids == null || ids.isEmpty()) return Collections.emptySet();
-        return ids.stream()
-                .map(sessions::get)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
+        if (userId == null || userId.isBlank()) {
+            return Set.of();
+        }
+        synchronized (lockFor(userId)) {
+            Set<String> ids = userSessions.get(userId);
+            if (ids == null || ids.isEmpty()) {
+                return Set.of();
+            }
+            Set<WsSession> result = new LinkedHashSet<>();
+            for (String sessionId : ids) {
+                WsSession session = sessions.get(sessionId);
+                if (session != null) {
+                    result.add(session);
+                }
+            }
+            return Set.copyOf(result);
+        }
     }
 
     /**
-     * 获取所有当前在线的会话。
+     * 获取全部会话快照。
      *
-     * @return 所有 WsSession 的集合视图
+     * @return 不可变会话快照
      */
     public Collection<WsSession> getAllSessions() {
-        return sessions.values();
+        return java.util.List.copyOf(sessions.values());
     }
 
     /**
-     * 获取所有在线用户的 ID 集合。
+     * 获取在线用户标识快照。
      *
-     * @return 在线 userId 集合
+     * @return 不可变用户标识集合
      */
     public Set<String> getOnlineUserIds() {
-        return new HashSet<>(userSessions.keySet());
+        return Set.copyOf(userSessions.keySet());
     }
 
     /**
-     * 获取当前在线会话总数。
+     * 获取在线会话数。
      *
-     * @return 会话总数
+     * @return 在线会话数
      */
     public long getSessionCount() {
         return sessions.size();
     }
 
     /**
-     * 获取当前在线用户数。
+     * 获取在线用户数。
      *
      * @return 在线用户数
      */
@@ -162,36 +189,21 @@ public class WsSessionManager {
         return userSessions.size();
     }
 
-    // ======================== 会话管理操作 ========================
-
     /**
-     * 强制踢出指定会话（断开连接并从管理器中移除）。
+     * 强制断开指定会话。
      *
-     * <p>被踢出的会话将被关闭底层 WebSocket 连接，并从所有索引中清除。</p>
-     *
-     * @param sessionId 待踢出的会话 ID
-     * @return {@code true} 如果会话存在并被成功踢出，{@code false} 如果会话不存在
+     * @param sessionId 会话 ID
+     * @return 会话存在时返回 {@code true}
      */
     public boolean kickOut(String sessionId) {
-        if (sessionId == null) return false;
-        WsSession session = sessions.get(sessionId);
-        if (session == null) return false;
-        try {
-            // 先发送踢出通知
-            session.sendMessage(WsMessage.of(WsMessage.TYPE_ERROR, "您已被管理员强制下线"));
-        } catch (Exception e) {
-            log.warn("Failed to send kick-out notification to session {}: {}", sessionId, e.getMessage());
-        }
-        remove(sessionId);
-        log.warn("Session kicked out: {}", sessionId);
-        return true;
+        return remove(sessionId) != null;
     }
 
     /**
-     * 判断指定会话是否存在且处于活跃状态。
+     * 判断会话是否处于活动状态。
      *
      * @param sessionId 会话 ID
-     * @return {@code true} 如果会话存在且活跃
+     * @return 会话活动时返回 {@code true}
      */
     public boolean isSessionAlive(String sessionId) {
         WsSession session = getSession(sessionId);
@@ -199,18 +211,59 @@ public class WsSessionManager {
     }
 
     /**
-     * 清空所有会话（通常在应用关闭时调用）。
+     * 幂等关闭并清空全部会话。
      */
     public void clearAll() {
-        log.info("Clearing all sessions, count: {}", sessions.size());
-        for (WsSession session : sessions.values()) {
-            try {
-                session.disconnect();
-            } catch (Exception e) {
-                log.warn("Error disconnecting session {}: {}", session.getSessionId(), e.getMessage());
-            }
+        for (String sessionId : Set.copyOf(sessions.keySet())) {
+            remove(sessionId);
         }
-        sessions.clear();
-        userSessions.clear();
+    }
+
+    /**
+     * 注册没有业务用户标识的独立会话。
+     *
+     * @param session 待注册会话
+     */
+    private void registerWithoutUser(WsSession session) {
+        WsSession existing = sessions.putIfAbsent(session.getSessionId(), session);
+        if (existing != null && existing != session) {
+            throw WsException.configurationInvalid("WebSocket 会话 ID 冲突");
+        }
+    }
+
+    /**
+     * 关闭被移除的会话。
+     *
+     * @param session 被移除会话
+     * @return 原会话，不存在时返回 {@code null}
+     */
+    private WsSession disconnect(WsSession session) {
+        if (session != null) {
+            session.disconnect();
+        }
+        return session;
+    }
+
+    /**
+     * 获取用户对应的稳定分段锁。
+     *
+     * @param userId 用户标识
+     * @return 分段锁
+     */
+    private Object lockFor(String userId) {
+        return userLocks[(userId.hashCode() & Integer.MAX_VALUE) % userLocks.length];
+    }
+
+    /**
+     * 创建固定数量的分段锁，避免按用户无限增长锁对象。
+     *
+     * @return 分段锁数组
+     */
+    private static Object[] createLocks() {
+        Object[] locks = new Object[LOCK_STRIPE_COUNT];
+        for (int index = 0; index < locks.length; index++) {
+            locks[index] = new Object();
+        }
+        return locks;
     }
 }
